# xopen

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/xopen/: config_schema.json  xopen.py
test_assets/: config.yml  empty.yml  xopen.ini
